--- a/css/chat.css
+++ b/css/chat.css
@@ -68,7 +68,7 @@ body {
      border-radius: 20px;
 }
  #uploadButton {
-     background-image: url('/cdn/images/uploadwhite.png');
+     background-image: url('https://static-cdn.chatlink.space/images/uploadwhite.png');
      background-size: 50%;
      background-position: center;
      background-repeat: no-repeat;
