--- a/css/chat.css
+++ b/css/chat.css
@@ -77,7 +77,7 @@ body {
 }
 
 #uploadButton {
-	background-image: url('https://static-cdn.chatlink.space/images/uploadwhite.png');
+	background-image: url('https://cdn.chatlink.space/images/uploadwhite.png');
 	background-size: 50%;
 	background-position: center;
 	background-repeat: no-repeat;
