--- a/css/chat.css
+++ b/css/chat.css
@@ -32,6 +32,13 @@ body {
 	flex-direction: column;
 }
 
+.chat-message-wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	gap: 5px;
+}
+
 .chat-message {
 	background: linear-gradient(135deg, #b7f0e7, #e0f7fa);
 	border-radius: 15px;
@@ -41,6 +48,25 @@ body {
 	word-wrap: break-word;
 	box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 	animation: popIn 0.3s ease forwards;
+}
+
+.chat-message .username {
+	font-size: 0.85rem;
+	color: #007bff;
+	font-weight: 600;
+}
+
+.chat-message .message-content {
+	margin-top: 5px;
+}
+
+.chat-message .username {
+	text-transform: capitalize;
+}
+
+.chat-message .message-content a {
+	color: #007bff;
+	text-decoration: none;
 }
 
 .chat-input {
@@ -112,7 +138,6 @@ body {
 	border-radius: 10px;
 }
 
-
 .image-message {
 	max-width: 100%;
 	height: auto;
@@ -152,12 +177,6 @@ body {
 
 #imageInput {
   display: none;
-}
-
-.chat-message-wrapper {
-	display: flex;
-	align-items: flex-start;
-	gap: 10px;
 }
 
 .avatar {
