--- a/css/chat.css
+++ b/css/chat.css
@@ -2,7 +2,7 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	background: linear-gradient(to top right, #a0e3f0, #d0f0c0);
+	background: #151515;
 	height: 100vh;
 	display: flex;
 	justify-content: center;
@@ -12,7 +12,7 @@ body {
 
 .chat-wrapper {
 	width: 300%;
-	max-width: 900px;
+	max-width: 1500px;
 	height: 90vh;
 	display: flex;
 	flex-direction: column;
