--- a/css/homepage.css
+++ b/css/homepage.css
@@ -2,7 +2,7 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	background: linear-gradient(to top right, #a0e3f0, #d0f0c0);
+	background: #151515;
 	height: 100vh;
 	display: flex;
 	justify-content: center;
