--- a/css/chat.css
+++ b/css/chat.css
@@ -59,7 +59,8 @@ body {
 	border: 1px solid #ccc;
 	margin-right: 10px;
 	margin-left: 10px;
-	background: #5d5d5d70
+	background: #5d5d5d70;
+	color: antiquewhite
 }
 
 .chat-input button {
