--- a/css/chat.css
+++ b/css/chat.css
@@ -42,10 +42,22 @@ body {
 	padding: 10px 15px;
 	margin-bottom: 10px;
 	max-width: 80%;
+	width: fit-content;
+	overflow-wrap: anywhere;
 	word-wrap: break-word;
 	box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 	animation: popIn 0.3s ease forwards;
 	color: #ffffff;
+}
+
+.chat-message.sent {
+  align-self: flex-end;
+  background-color: #d1e7dd;
+}
+
+.chat-message.received {
+  align-self: flex-start;
+  background-color: #f8d7da;
 }
 
 .chat-input {
